--- a/template.mustache/[s]show_all_tables.html
+++ b/template.mustache/[s]show_all_tables.html
@@ -1,6 +1,6 @@
 {{defaultConfig.defaultView}}
 <br />
-{{#items}}
+{{#table}}
 <strong>{{tableName}}</strong>: <br />
 <ul>
 {{#columns}}
@@ -14,4 +14,4 @@
 	</li>
 {{/columns}}
 </ul>
-{{/items}}
+{{/table}}
